--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -1,11 +1,12 @@
 .card {
   margin-top: 5px;
   margin-left: 12px;
-  width: 176px;
+  margin-right: 8px;
 }
 
 .card-img {
   height: 235px;
+  width: 176px;
 }
 
 .bold {
