--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -1,7 +1,23 @@
 .card {
+  position: relative;
   margin-top: 5px;
   margin-left: 12px;
   margin-right: 8px;
+}
+
+.card-badge {
+  position: absolute;
+  top: 6px;
+  left: 6px;
+  background-color: white;
+  padding: 5px 7px;
+  border-radius: 2px;
+  font-family: Poppins;
+  font-size: 10px;
+  font-weight: 400;
+  line-height: 11px;
+  letter-spacing: 0em;
+  text-align: center;
 }
 
 .card-img {
@@ -30,7 +46,7 @@
 }
 
 .rating-number {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 12px;
   font-weight: 300;
   line-height: 13px;
@@ -38,23 +54,23 @@
 }
 
 .country-text {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 12px;
   font-weight: 300;
   line-height: 13px;
-  color: #918E9B;
+  color: #918e9b;
   margin-left: 3px;
 }
 
 .service-name {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 12px;
   font-weight: 300;
   line-height: 13px;
 }
 
 .price {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 12px;
   font-weight: 600;
   line-height: 13px;
@@ -62,7 +78,7 @@
 }
 
 .person {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 12px;
   font-weight: 300;
   line-height: 13px;
